tests/test_assets/semantic/invalid/arrays/return_element_count.expected
semantic error at line 5: array initializer element count does not match array size
1 semantic error generated.
